# fda-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  HOW_IT_WORKS.md  Makefile  README.md  architecture.html  codebase_map.html  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/sample/xml/: adalimumab.xml  albuterol.xml  amlodipine.xml  amoxicillin.xml  apixaban.xml  atorvastatin.xml  azithromycin.xml  escitalopram.xml  gabapentin.xml  levothyroxine.xml  lisinopril.xml  metformin.xml  metoprolol.xml  naloxone.xml  omeprazole.xml  pembrolizumab.xml  prednisone.xml  semaglutide.xml  sertraline.xml  warfarin.xml
docker/: init.sql
docs/: 01-architecture.md  02-query-flow.md  03-ingestion.md  04-database.md  05-code-walkthrough.md  README.md
scripts/: download_dailymed.py  migrate.py  run_ingestion.py
src/fda_rag/: __init__.py
src/fda_rag/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py
src/fda_rag/api/: __init__.py  main.py  models.py
src/fda_rag/eval/: __init__.py
src/fda_rag/ingestion/: __init__.py  chunker.py  loader.py  parser.py
src/fda_rag/retrieval/: __init__.py  reranker.py  retriever.py
src/fda_rag/ui/: __init__.py  app.py
tests/: conftest.py  test_ingestion.py  test_retrieval.py  test_smoke.py
