[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fda-rag"
version = "0.1.0"
description = "Agentic RAG over FDA drug-label data (DailyMed SPL + Drug Safety Communications)"
requires-python = ">=3.11"
dependencies = [
    # Database
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    # Config / env
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # API layer
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    # UI
    "streamlit>=1.35",
    # Agent / LLM
    "google-genai>=1.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langsmith>=0.1",
    # Embeddings + reranker
    "voyageai>=0.2",
    # Eval
    "ragas>=0.1",
    # HTTP client (download scripts + FastAPI test client)
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

# Tell hatchling where to find the package in the src/ layout
[tool.hatch.build.targets.wheel]
packages = ["src/fda_rag"]

# ---------------------------------------------------------------------------
# Ruff — lint + format (replaces flake8, isort, black)
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "RUF", # ruff-specific rules
]
ignore = ["E501"]  # line length enforced by formatter, not linter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
